<resources>
    <string name="app_name">My Daily Goal </string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="statistic">STATISTIC</string>
    <string name="challenge">challenge</string>
    <string name="task_name">TASK TITLE</string>
    <string name="time_for_next_task">Time For The Next Left</string>
    <string name="todo">TODO</string>
    <string name="_4_5">4/5</string>
    <string name="todo1">TODO</string>
    <string name="how_much">4/5</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo6">TODO</string>
    <string name="to_do6">To Do</string>
    <string name="description">Description</string>
    <string name="date_now">date now</string>
    <string name="todo9">TODO</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="add_new_task">ADD NEW TASK</string>
    <string name="high">High</string>
    <string name="task_name2">Task Name</string>
    <string name="time2">Select The Time</string>
    <string name="description2">Description</string>
    <string name="priorty2">Priorty</string>
    <string name="medium">medium</string>
    <string name="low">Low</string>
    <string name="date1">Date</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="todoff">TODO</string>
    <string name="todoffff">TODO</string>
    <string name="done">Done</string>
    <string name="set_the_alarm">Set The Alarm</string>
    <string name="todovbf">TODO</string>
    <string name="todovv">TODO</string>
    <string name="priorty">1</string>
    <string name="select_the_date">Select The Date</string>
    <string name="categore_name">Categore Name</string>
    <string name="ctegore_name">Ctegore Name</string>
    <string name="sara">sara</string>
    <string name="todouu">TODO</string>
    <string name="hfhf">TODO</string>
    <string name="study">Study</string>
    <string name="Working">Working</string>
    <string name="Cleaning">Cleaning</string>
    <string name="set_password">Set Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="inter_password">inter password</string>
    <string name="title_home">HOME</string>
    <string name="title_tasks">DAILY GOALS</string>
    <string name="yarly_goals">YEAR GOALS</string>
    <string name="are_you_sure">Are You Sure</string>
    <string name="gdhfj">TODO</string>
    <string name="csdnsrfn">TODO</string>
    <string name="nfgklnn">TODO</string>
    <string name="my_categoriers">MY CATEGORIES</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="enter_year">ENTER YEAR</string>
    <string name="enter_goals">ENTER GOALS</string>
    <string name="chose_a_color">Chose a Color</string>
    <string name="CrateCategoryTitle">Create Category</string>
    <string name="my_yarly_goals">MY YARLY GOALS</string>
    <string name="EnterPasswordTitle">ENET YOUR PASSWORD</string>
    <string name="SetPassword">SET A PASSWORD</string>
    <string name="RemovePassword">UNSET MY PASSWORD</string>
    <string name="my_preformence">MY PREFORMANCE</string>
    <string name="task_preformance">Tas;s preformance</string>
    <string name="yearly_tasks">YARLY GOALS</string>
    <string name="category">category</string>
</resources>
