<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/ItemBackGround"
    android:layout_marginStart="8dp"
    android:foreground="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBox"
            android:layout_alignBottom="@+id/checkBox"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:gravity="top|right"
            android:text="priorty" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:checked="false"
            android:onClick="taskIsDone"
            android:text="@string/to_do6"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_view_priorty"
            android:layout_alignBottom="@+id/text_view_priorty"
            android:layout_alignParentStart="true"
            android:maxLines="3"
            android:layout_marginLeft="8dp"
            android:text="@string/description"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_view_priorty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/checkBox"
            android:layout_marginEnd="18dp"
            android:text="@string/priorty"
            android:textColor="@color/priorty"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_notifications"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toEndOf="@+id/imageView2"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/time"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/time"
            android:layout_toEndOf="@+id/time"
            android:text="|"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_view_priorty"
            android:layout_marginTop="7dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_alarm"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/date"
            android:textSize="10sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>