<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="-85dp"
        android:layout_marginStart="-10dp"
        android:contentDescription="@string/gdhfj"
        android:src="@drawable/ic_category_bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506"
        tools:layout_editor_absoluteX="4dp" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_multiply"
        android:layout_margin="25dp"
        android:onClick="closeTasks"
        android:layout_gravity="top|right"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_now"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/ThirdTextColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/txt_categry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="80dp"
        android:layout_gravity="top|center"
        android:layout_marginStart="8dp"
        android:textColor="@color/ThirdTextColor"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        tools:listitem="@layout/to_do_item" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_add_task"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_add"
        tools:layout_editor_absoluteX="306dp" />

</android.support.design.widget.CoordinatorLayout>