<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/item_category"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_margin="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/item2"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:gravity="top|center"
        android:paddingTop="30dp"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/sara"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/ThirdTextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/lock_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/item_category"
        app:layout_constraintEnd_toEndOf="@+id/item_category"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/item_category"
        app:layout_constraintTop_toTopOf="@+id/item_category"
        app:layout_constraintVertical_bias="0.26" android:contentDescription="@string/csdnsrfn" />

    <ImageView
        android:id="@+id/done_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_pause_circle"
        app:layout_constraintBottom_toBottomOf="@+id/item_category"
        app:layout_constraintEnd_toEndOf="@+id/item_category"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_category"
        app:layout_constraintTop_toTopOf="@+id/item_category"
        app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/nfgklnn" />


    <!-- <ImageView
            android:id="@+id/backGround"
            android:layout_width="129dp"
            android:layout_height="108dp"
            android:layout_gravity="right|center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/nfgklnn"
            android:src="@drawable/ic_super"
            app:layout_constraintBottom_toBottomOf="@+id/item_category"
            app:layout_constraintEnd_toEndOf="@+id/item_category"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="@+id/item_category"
            app:layout_constraintTop_toTopOf="@+id/item_category"
            app:layout_constraintVertical_bias="0.437" /> -->

    <TextView
        android:id="@+id/total_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="23task"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="@color/ThirdTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/item_category"
        app:layout_constraintEnd_toEndOf="@+id/item_category"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/item_category"
        app:layout_constraintTop_toTopOf="@+id/item_category"
        app:layout_constraintVertical_bias="1.0" />

    <!-- </android.support.v7.widget.CardView>-->

</android.support.constraint.ConstraintLayout>